# st-gist

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  debug_thinking.py  pyproject.toml
.github/workflows/: format-and-lint.yml  run-tests.yml
.streamlit/: config.toml  secrets.example.toml
dev/: CLAUDE.md
dev/mocks/: mock_ollama_client.py  mock_scraping_service.py  mock_summarization_service.py
dev/mocks/models/: mock_conversation_model.py  mock_scraping_model.py  mock_summarization_model.py
src/: CLAUDE.md  app_state.py  main.py  router.py  routing.py  state.py
src/clients/: ollama_client.py
src/clients/ollama_api_client/: client.py  interface.py
src/components/: __init__.py  chat_ui.py  footer.py  header.py  query_page.py  sidebar.py  think_display.py  url_input.py  url_input_page.py
src/components/query_page/: __init__.py  chat_ui.py  query_page.css  query_page.py
src/components/sidebar/: sidebar.py
src/components/url_input/: url_input_page.py
src/components/url_input_page/: __init__.py  app_description.py  url_input.py  url_input_page.py
src/models/: CLAUDE.md  __init__.py  conversation_model.py  scraping_model.py  summarization_model.py  vector_store.py
src/protocols/: ollama_client_protocol.py  scraping_protocol.py  summarization_protocol.py
src/services/: __init__.py  conversation_service.py  scraping_service.py  summarization_service.py  vector_store.py
src/static/css/: custom-button.css  (+3 more)
tests/: CLAUDE.md  conftest.py  utils.py
tests/e2e/: test_e2e.py
tests/integration/: test_url_processing_integration.py
tests/intg/: test_app_flow.py  test_think_display_integration.py  test_url_processing_integration.py  test_url_processing_with_thinking_integration.py
(+18 files in other folders)
