[project]
name = "st-gist"
version = "0.1.0"
description = "A Streamlit app to summarize and query web pages."
authors = [
    {name = "akitorahayashi", email = "atora.has75@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "olm-api @ git+https://github.com/akitorahayashi/olm-api.git@v1.0.0",
    "streamlit>=1.49.1",
    "pandas>=2.0.0",
    "numpy>=1.26.0,<2.0",
    "plotly>=5.17.0",
    "httpx~=0.27.0",
    "beautifulsoup4>=4.12.0",
    "sentence-transformers>=2.2.2",
    "langchain-text-splitters>=0.2.0",
    "watchdog>=6.0.0",
    "pyperclip>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=25.1.0",
    "ruff>=0.12.11",
    "selenium>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pytest-asyncio>=1.1.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
target-version = ['py312']
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.venv
    | venv
    | env
    | build
    | dist
    | .*/(bin|lib|share|etc)
    | .*/pyvenv\.cfg
)/
'''

[tool.ruff]
target-version = "py312"

exclude = [
	"__pycache__",
	"migrations",
	"db.sqlite3",
	"*.pyc",
	".venv",
	"venv",
	"env",
	"*/bin/**",
	"*/lib/**",
	"*/share/**",
	"*/etc/**",
	"*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 (line too long) is ignored
ignore = ["E501"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
